refact: update README.md and deleted enable-preview